small fix
